[CAMEL-19779] Refactor code generators to use velocity templates